hphp/hack/test/typecheck/super_constraint_4.php.exp
File "super_constraint_4.php", line 12, characters 10-13:
Invalid return type (Typing[4110])
File "super_constraint_4.php", line 11, characters 4-5:
Expected Tx
File "super_constraint_4.php", line 9, characters 3-4:
But got Ty
